--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -3,27 +3,20 @@
 
 SHELL         := /bin/sh                                                                                                                                                                              
 
-INSTALL       := install
-INSTALL_DIR   := $(INSTALL) -m 755 -d
-RM            := rm -f
 
-# The directory to install
-prefix        := /usr/local
-bindir         = $(prefix)/bin
-libdir         = $(prefix)/lib64
-incdir         = $(prefix)/include
 # automatic rules for collecting and assembling all possible source
 # files.
 
 # obj output dir
 OBJ_DIR       := obj
 
-INC_DIRS      := -I.
+INC_DIRS      := -I../../hdr
 
-CFLAGS        := $(INC_DIRS) -g -O1 -Wall -Werror -msse2
+CFLAGS        := $(INC_DIRS) -g -Wall -Werror
+LD_FLAGS      := -L.. -lfpga_net -lgdb_print -lpthread -lrt
 
 # target define
-TARGET        := libfpga_net.a
+TARGET        := fpag_test
 
 # source files
 SRC_FILES     := $(wildcard *.c)
@@ -43,7 +36,7 @@ CPP_DEPS      := $(CPP_SRC_FILES:%.cpp=$(OBJ_DIR)/%.d)
 DEPS          := $(C_DEPS) $(CPP_DEPS)
 
 
-.PHONY: all clean install deploy
+.PHONY: all clean deploy
 
 # This is the default target.  It must be the first declared target.
 all: $(TARGET)
@@ -54,25 +47,26 @@ all: $(TARGET)
 
 # clean
 clean:
+	@$(MAKE) -C ../ clean
 	@$(RM) $(OBJ_FILES) $(TARGET)
 	@$(RM) -r $(OBJ_DIR)
 
 install: $(TARGET)
-	$(INSTALL_DIR) $(libdir)
-	$(INSTALL_DIR) $(incdir)
-	$(INSTALL) -m 644 $(TARGET) $(libdir)
-	$(INSTALL) -m 644 fpga_net.h fpga_drv.h $(incdir)
+	$(INSTALL_DIR) $(bindir)
+	$(INSTALL_PRG) $(TARGET) $(bindir)
 
 uninstall:
-	$(RM) $(libdir)/$(TARGET)
-	$(RM) $(incdir)/fpga_net.h $(incdir)/fpga_drv.h
+	$(RM) $(bindir)/$(TARGET)
 
 #
 # Rules for generating target
 #
-$(TARGET): $(OBJ_DIR) $(OBJ_FILES)
+$(TARGET): $(OBJ_DIR) $(OBJ_FILES) ../libfpga_net.a
 	@echo "generating $@ ..."
-	@$(AR) -cqs $@ $(OBJ_FILES)
+	@$(CC) -g -o $@ $(OBJ_FILES) $(LD_FLAGS) 
+
+../libfpga_net.a:
+	@$(MAKE) -C ../
 
 #
 # Rules for compiling cpp code
