fix linux test build

--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -12,7 +12,7 @@ OBJ_DIR       := obj
 
 INC_DIRS      := -I../../hdr
 
-CFLAGS        := $(INC_DIRS) -g -Wall -Werror
+CFLAGS        := $(INC_DIRS) -g -Wall -Werror  -D_GNU_SOURCE
 LD_FLAGS      := -L.. -lfpga_net -lgdb_print -lpthread -lrt
 
 # target define
