rx thread set affinity to a core

--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -12,7 +12,7 @@ OBJ_DIR       := obj
 
 INC_DIRS      := -I../../hdr -I../
 
-CFLAGS        := $(INC_DIRS) -g -Wall -Werror  -D_GNU_SOURCE -DNDEBUG
+CFLAGS        := $(INC_DIRS) -g -Wall -Werror -msse2 -D_GNU_SOURCE -DNDEBUG
 LD_FLAGS      := -L.. -lfpga_net -lgdb_print -lpthread -lrt
 
 # target define
